* Implement audio backends as plugins to allow user selection.

=== Version 3.10.1 (KDE Gear 24.12.1) --- 2 January 2025 ===
* Show normal decorated alarm windows over full screen applications on X11.
* Fix Akonadi functionality not working.
* Make fade work each time a repeated sound alarm is played.
* Fix Edit Alarm dialogue error setting time if user's time zone is UTC [KDE Bug 497960]

=== Version 3.10.0 (KDE Gear 24.12) --- 30 September 2024 ===
* Provide build option to use VLC or MPV to play sounds.
* Show all Run Mode options in Preferences dialogue. 
* Convert to Qt 6.5 QDateTime/QTimeZone changes.

=== Version 3.9.2 (KDE Gear 24.08.2) --- 26 September 2024 ===
* Fix crash if kernel alarm timers are supported.
* Fix Wake from Suspend not working when using RTC wake [KDE Bug 486187]
* Display audio error message immediately when using Try button while editing an alarm.
* Ensure that audio play is not attempted if audio initialisation failed.
* Fix failure to play sound files using libVLC on some systems [KDE Bug 493128]

=== Version 3.9.1 (KDE Gear 24.08.1) --- 9 September 2024 ===
* Fix repeating audio alarms only playing once [KDE Bug 492425]

=== Version 3.9.0 (KDE Gear 24.08) --- 9 July 2024 ===
* Use VLC instead of libcanberra to play sounds [KDE Bug 489597, 489213, 484851]

=== Version 3.8.2 (KDE Gear 24.05.2) --- 14 June 2024 ===
* Fix crash after editing new alarm if spell checking is enabled [KDE Bug 488488]

=== Version 3.8.1 (KDE Gear 24.02.2) --- 27 March 2024 ===
* Display error message if error occurs trying to play an audio file [KDE Bug 484503]

=== Version 3.8.0 (KDE Gear 24.02.1) --- 8 March 2024 ===
* Use libcanberra instead of Phonon to play sounds, for thread safety [KDE Bug 381334]
* In Edit Alarm dialogue, allow save if Set Volume checkbox is toggled.

=== Version 3.7.0 (KDE Gear 24.02) --- 9 February 2024 ===
* Convert to Qt6 / KDE Frameworks 6.